[gd_scene load_steps=10 format=2]

[ext_resource path="res://Cenas/Fases/Fase 2/Bridge/Bridge.gd" type="Script" id=1]
[ext_resource path="res://Public/Scenery/bridge.png" type="Texture" id=2]
[ext_resource path="res://Public/KeyboardKeys/teclaE.png" type="Texture" id=3]
[ext_resource path="res://Public/Utilitarios/bigLightFrame.png" type="Texture" id=4]
[ext_resource path="res://Public/Utilitarios/woodIcon.png" type="Texture" id=5]
[ext_resource path="res://Public/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.5, 33 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 22, 6.5 )

[sub_resource type="DynamicFont" id=3]
size = 61
font_data = ExtResource( 6 )

[node name="Bridge" type="StaticBody2D"]
collision_layer = 15
collision_mask = 15
script = ExtResource( 1 )

[node name="Block" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 41 )
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 42 )
texture = ExtResource( 2 )

[node name="Input" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 255

[node name="Activation" type="CollisionShape2D" parent="Input"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="Activation2" type="CollisionShape2D" parent="Input"]
position = Vector2( 0, 85 )
shape = SubResource( 2 )

[node name="ActionButton" type="Sprite" parent="."]
position = Vector2( -21, 41 )
texture = ExtResource( 3 )

[node name="WoodCountFrame" type="TextureRect" parent="ActionButton"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -55.0
margin_right = 15.0
margin_bottom = -37.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="WoodIcon" type="TextureRect" parent="ActionButton/WoodCountFrame"]
margin_left = 2.0
margin_top = 4.25
margin_right = 20.0
margin_bottom = 23.25
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="WoodCountLabel" type="Label" parent="ActionButton/WoodCountFrame"]
anchor_left = 1.453
anchor_top = 0.016
anchor_right = 1.453
anchor_bottom = 0.016
margin_left = -35.246
margin_top = 2.712
margin_right = 37.754
margin_bottom = 49.712
rect_scale = Vector2( 0.25, 0.25 )
custom_fonts/font = SubResource( 3 )
text = "x 2"
align = 1

[connection signal="area_entered" from="Input" to="." method="_on_Input_area_entered"]
[connection signal="area_exited" from="Input" to="." method="_on_Input_area_exited"]
